--- a/style.css
+++ b/style.css
@@ -17,20 +17,61 @@ header .header-image {
 header .header-image h2 {
   color: white;
   padding: 0px 20px;
+  text-shadow: rgb(94, 94, 94) 2px 2px;
 }
 header nav {
   text-align: center;
 }
-header nav li {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 5px;
+@media screen and (min-width: 768px) {
+  header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
-header nav li:hover {
-  background-color: #171717;
-  color: white;
+@media screen and (min-width: 768px) {
+  header nav h3 {
+    margin-right: auto;
+    margin-left: 30px;
+  }
+}
+header nav ul {
+  padding: 10px 0px;
+}
+@media screen and (min-width: 768px) {
+  header nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: auto;
+  }
+  header nav ul li {
+    padding: 5px;
+    color: black;
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 768px) {
+  header nav ul li {
+    margin: 0px 5px;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1024px) {
+  header nav ul li {
+    font-size: 15px;
+    margin: 0px 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  header nav ul li:hover {
+    background-color: #171717;
+    color: white;
+  }
 }
 
 .section-1 {
@@ -42,15 +83,33 @@ header nav li:hover {
   font-weight: 300;
   margin-bottom: 20px;
 }
+@media screen and (min-width: 768px) {
+  .section-1 h3 {
+    font-size: 30px;
+  }
+}
+.section-1 .container-filigrane1 {
+  position: relative;
+}
 .section-1 .filigrane1 {
-  font-size: 38px;
-  font-weight: 900;
+  position: relative;
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: rgb(0, 0, 0);
   opacity: 0.05;
+  font-size: 35px;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.section-1 .dessus1 {
   position: absolute;
-  z-index: 0;
-  top: 685px;
-  right: 0;
+  top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
+  margin: 0;
 }
 .section-1 hr {
   width: 10%;
@@ -58,6 +117,7 @@ header nav li:hover {
 }
 .section-1 p {
   padding: 20px;
+  margin: 0px 20px;
 }
 
 .section-2 {
@@ -68,15 +128,10 @@ header nav li:hover {
   font-weight: 300;
   margin-bottom: 20px;
 }
-.section-2 .filigrane2 {
-  font-size: 38px;
-  font-weight: 900;
-  opacity: 0.05;
-  position: absolute;
-  z-index: 0;
-  top: 1165px;
-  right: 0;
-  left: 0;
+@media screen and (min-width: 768px) {
+  .section-2 h3 {
+    font-size: 30px;
+  }
 }
 .section-2 hr {
   width: 10%;
@@ -88,6 +143,12 @@ header nav li:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .section-2 ul {
+    display: flex;
+    flex-direction: row;
+  }
 }
 .section-2 ul li {
   background-color: #f5f5f5;
@@ -105,9 +166,18 @@ header nav li:hover {
   justify-content: center;
   align-items: center;
 }
+@media screen and (min-width: 1024px) {
+  .section-2 .gallerie {
+    width: 1000px;
+    margin: 0 auto;
+  }
+}
 .section-2 .gallerie img {
   width: 250px;
   margin: 10px;
+}
+.section-2 .gallerie img:hover {
+  opacity: 0.8;
 }
 
 .section-3 {
@@ -119,15 +189,11 @@ header nav li:hover {
   font-weight: 300;
   margin-bottom: 20px;
 }
-.section-3 .filigrane3 {
-  font-size: 38px;
-  font-weight: 900;
-  opacity: 0.05;
-  position: absolute;
-  z-index: 0;
-  top: 3000px;
-  right: 0;
-  left: 0;
+@media screen and (min-width: 768px) {
+  .section-3 h3 {
+    font-size: 30px;
+    margin: 0px 30px;
+  }
 }
 .section-3 hr {
   width: 10%;
@@ -143,6 +209,12 @@ header nav li:hover {
   justify-content: center;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  .section-3 .gallerie-icon {
+    width: 800px;
+    margin: auto;
+  }
+}
 .section-3 .gallerie-icon .bloc-icon {
   display: flex;
   flex-direction: column;
@@ -155,13 +227,246 @@ header nav li:hover {
 }
 .section-3 .gallerie-icon .bloc-icon img {
   width: 30px;
+  margin: 10px;
 }
-.section-3 .section-4 {
+
+@media screen and (min-width: 768px) {
+  .section-4 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
+.section-4-left img {
+  width: 100%;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .section-4-left {
+    width: 30%;
+  }
+}
+.section-4-right {
+  padding: 0px 20px;
+}
+@media screen and (min-width: 768px) {
+  .section-4-right {
+    width: 70%;
+  }
+}
+.section-4-right h3 {
+  text-align: center;
+  font-weight: 300;
+}
+@media screen and (min-width: 768px) {
+  .section-4-right h3 {
+    font-size: 30px;
+  }
+}
+.section-4-right hr {
+  width: 10%;
+  margin: 30px auto;
+}
+.section-4-right img {
+  width: 20px;
+  filter: invert(1);
+  margin-left: 10px;
+}
+.section-4-right .container-techno {
+  color: white;
+  font-size: 12px;
+}
+.section-4-right .container-techno1 {
+  background-color: #f5f5f5;
+  width: 100%;
+  box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+  margin: 10px 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.section-4-right .container-techno1 p {
+  width: 94%;
+  background-color: #d9534f;
+}
+.section-4-right .container-techno1 p img {
+  margin-right: 10px;
+}
+.section-4-right .container-techno2 {
+  background-color: #f5f5f5;
+  width: 100%;
+  box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+  margin: 10px 0px;
+}
+.section-4-right .container-techno2 p {
+  width: 94%;
+  background-color: #0E3658;
+}
+.section-4-right .container-techno2 p img {
+  margin-right: 10px;
+}
+.section-4-right .container-techno3 {
+  background-color: #f5f5f5;
+  width: 100%;
+  box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+  margin: 10px 0px;
+}
+.section-4-right .container-techno3 p {
+  width: 90%;
+  background-color: #3370b7;
+}
+.section-4-right .container-techno3 p img {
+  margin-right: 10px;
+}
+.section-4-right .container-techno4 {
+  background-color: #f5f5f5;
+  width: 100%;
+  box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+  margin: 10px 0px;
+}
+.section-4-right .container-techno4 p {
+  width: 80%;
+  background-color: #5399c8;
+}
+.section-4-right .container-techno4 p img {
+  margin-right: 10px;
+}
+.section-4-right .container-techno5 {
+  background-color: #f5f5f5;
+  width: 100%;
+  box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+  margin: 10px 0px;
+}
+.section-4-right .container-techno5 p {
+  width: 75%;
+  background-color: #439788;
+}
+.section-4-right .container-techno5 p img {
+  margin-right: 10px;
+}
+.section-4-right .container-techno6 {
+  background-color: #f5f5f5;
+  width: 100%;
+  box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+  margin: 10px 0px;
+}
+.section-4-right .container-techno6 p {
+  width: 70%;
+  background-color: #e85f80;
+}
+.section-4-right .container-techno6 p img {
+  margin-right: 10px;
+}
+.section-4-right .container-techno7 {
+  background-color: #f5f5f5;
+  width: 100%;
+  box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+  margin: 10px 0px;
+}
+.section-4-right .container-techno7 p {
+  width: 70%;
+  background-color: #333333;
+}
+.section-4-right .container-techno7 p img {
+  margin-right: 10px;
+}
+.section-4-right .container-techno8 {
+  background-color: #f5f5f5;
+  width: 100%;
+  box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+  margin: 10px 0px;
+}
+.section-4-right .container-techno8 p {
+  width: 70%;
+  background-color: #e8b361;
+}
+.section-4-right .container-techno8 p img {
+  margin-right: 10px;
+}
+
+.section-5 {
+  background-color: #f5f5f5;
+  padding: 30px 10px;
+}
+.section-5 h3 {
+  text-align: center;
+  font-weight: 300;
+}
+@media screen and (min-width: 768px) {
+  .section-5 h3 {
+    font-size: 30px;
+  }
+}
+.section-5 hr {
+  width: 10%;
+  margin: 20px auto;
+}
+.section-5 form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.section-3 .section-4-left {
+.section-5 form .nom, .section-5 form .mail, .section-5 form .message, .section-5 form .button {
+  margin: 5px 0px;
   width: 250px;
+  height: 30px;
+  border: none;
+}
+@media screen and (min-width: 768px) {
+  .section-5 form .nom, .section-5 form .mail, .section-5 form .message, .section-5 form .button {
+    width: 400px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .section-5 form .nom, .section-5 form .mail, .section-5 form .message, .section-5 form .button {
+    width: 600px;
+  }
+}
+.section-5 form input::-moz-placeholder {
+  padding-left: 20px;
+}
+.section-5 form input:-ms-input-placeholder {
+  padding-left: 20px;
+}
+.section-5 form input::placeholder {
+  padding-left: 20px;
+}
+.section-5 form .message {
+  height: 150px;
+}
+.section-5 form .button {
+  background-color: #171717;
+  color: white;
+  padding: 5px 0px;
+  height: 30px;
+}
+.section-5 form .button:hover {
+  opacity: 0.8;
+}
+
+footer {
+  background-color: #171717;
+  padding: 20px 0px;
+}
+footer ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+footer ul img {
+  width: 20px;
+  filter: invert(1);
+  margin: 10px 10px;
+}
+footer ul img:hover {
+  opacity: 0.8;
+}
+footer h4 {
+  color: white;
+  font-size: 10px;
+  text-align: center;
+  font-weight: 200;
 }/*# sourceMappingURL=style.css.map */
