--- a/style.scss
+++ b/style.scss
@@ -19,26 +19,61 @@ header {
             h2 {
                 color: white;
                 padding: 0px 20px;
+                text-shadow: rgb(94, 94, 94) 2px 2px;
             }
     }
 
     nav {
         text-align: center;
-
-        li {
+        @media screen and (min-width: 768px) {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             justify-content: center;
             align-items: center;
-            padding: 5px;
+        }
 
-            &:hover {
-                background-color: #171717;
-                color: white;
+        h3 {
+            
+            @media screen and (min-width: 768px) {
+            margin-right: auto;
+            margin-left: 30px;
+            }
+        }
+
+        ul {
+            padding: 10px 0px;
+            @media screen and (min-width: 768px) {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                margin-right: auto;
+
+                li {
+                    padding: 5px;
+                    color: black;
+                    font-size: 12px;
+
+                    @media screen and (min-width: 768px) {
+                        margin: 0px 5px;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 10px;
+                    }
+
+                    @media screen and (min-width: 1024px) {
+                        font-size: 15px;
+                        margin: 0px 10px;
+                    }
+
+                    &:hover {
+                        background-color: #171717;
+                        color: white;
+                    }
+                }
             }
         }
     }
-
 }
 
 .section-1 {
@@ -49,17 +84,34 @@ header {
     h3 {
         font-weight: 300;
         margin-bottom: 20px;
+        @media screen and (min-width: 768px) {
+            font-size: 30px;
+        }
+    }
+
+    .container-filigrane1 {
+        position: relative;
     }
 
     .filigrane1 {
-        font-size: 38px;
-        font-weight: 900;
-        opacity: 0.05;
+    position: relative;
+    background-clip: text;
+    color: rgb(0, 0, 0);
+    opacity: 0.05;
+    font-size: 35px;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+    .dessus1 {
         position: absolute;
-        z-index: 0;
-        top: 685px;
-        right: 0;
+        top: 0;
+        bottom: 0;
         left: 0;
+        right: 0;
+        margin:0;
     }
 
     hr {
@@ -69,6 +121,7 @@ header {
 
     p {
         padding: 20px;
+        margin: 0px 20px;
     }
 }
 
@@ -80,18 +133,11 @@ header {
     h3 {
         font-weight: 300;
         margin-bottom: 20px;
+        @media screen and (min-width: 768px) {
+            font-size: 30px;
+        }
     }
 
-    .filigrane2 {
-        font-size: 38px;
-        font-weight: 900;
-        opacity: 0.05;
-        position: absolute;
-        z-index: 0;
-        top: 1165px;
-        right: 0;
-        left: 0;
-    }
 
     hr {
         width: 10%;
@@ -104,6 +150,10 @@ header {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-direction: row;
+        }
 
         li {
             background-color: #f5f5f5;
@@ -124,10 +174,18 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        @media screen and (min-width: 1024px) {
+            width: 1000px;
+            margin: 0 auto;
+        }
         
         img {
             width: 250px;
             margin: 10px;
+
+            &:hover {
+                opacity: 0.8;
+            }
         }
     }
 
@@ -141,17 +199,10 @@ header {
     h3 {
         font-weight: 300;
         margin-bottom: 20px;
-    }
-
-    .filigrane3 {
-        font-size: 38px;
-        font-weight: 900;
-        opacity: 0.05;
-        position: absolute;
-        z-index: 0;
-        top: 3000px;
-        right: 0;
-        left: 0;
+        @media screen and (min-width: 768px) {
+            font-size: 30px;
+            margin: 0px 30px;
+        }
     }
 
     hr {
@@ -169,6 +220,10 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        @media screen and (min-width: 768px) {
+            width: 800px;
+            margin: auto;
+        }
 
         .bloc-icon {
             display: flex;
@@ -182,19 +237,290 @@ header {
     
             img {
                 width: 30px;
+                margin: 10px;
             }
         }
     }
+}
 
-    .section-4 {
+.section-4 {
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    &-left {
+        img {
+        width: 100%;
+        margin-bottom: 30px;
+        }
+        @media screen and (min-width: 768px) {
+            width: 30%;
+            
+        }
+    }
+
+    &-right {
+        @media screen and (min-width: 768px) {
+            width: 70%;
+            
+        }
+        padding: 0px 20px;
+
+        h3 {
+            text-align: center;
+            font-weight: 300;
+            @media screen and (min-width: 768px) {
+            font-size: 30px;
+        }
+        }
+
+        hr {
+            width: 10%;
+            margin: 30px auto;
+        }
+
+        // .filigrane4 {
+        //     font-size: 38px;
+        //     font-weight: 900;
+        //     opacity: 0.05;
+        //     position: absolute;
+        //     z-index: 0;
+        //     top: 5010px;
+        //     right: 0;
+        //     left: 0;
+        //     }
+
+        img {
+        width: 20px;
+        filter: invert(1);
+        margin-left: 10px;
+        }
+
+        .container-techno {
+            color: white;
+            font-size: 12px;
+
+            &1 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                p {
+                    width: 94%;
+                    background-color: #d9534f;
+
+                    img {
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            &2 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
+
+                p {
+                    width: 94%;
+                    background-color: #0E3658;
+
+                    img {
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            &3 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
+                
+                p {
+                    width: 90%;
+                    background-color: #3370b7;
+
+                    img {
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            &4 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
+
+                p {
+                    width: 80%;
+                    background-color: #5399c8;
+
+                    img {
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            &5 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
+
+                p {
+                    width: 75%;
+                    background-color: #439788;
+
+                    img {
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            &6 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
+
+                p {
+                    width: 70%;
+                    background-color: #e85f80;
+
+                    img {
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            &7 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
+
+                p {
+                    width: 70%;
+                    background-color: #333333;
+
+                    img {
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            &8 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
+
+                p {
+                    width: 70%;
+                    background-color: #e8b361;
+
+                    img {
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.section-5 {
+    background-color: #f5f5f5;
+    padding: 30px 10px;
+
+    h3 {
+        text-align: center;
+        font-weight: 300;
+        @media screen and (min-width: 768px) {
+            font-size: 30px;
+        }
+
+    }
+
+    hr {
+        width: 10%;
+        margin: 20px auto;
+    }
+
+    form {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
-        &-left {
+        .nom, .mail, .message, .button {
+            margin: 5px 0px;
             width: 250px;
+            height: 30px;
+            border: none;
+
+            @media screen and (min-width: 768px) {
+                width: 400px;
+            }
+
+            @media screen and (min-width: 1024px) {
+                width: 600px;
+            }
+        }
+
+        input::placeholder {
+            padding-left: 20px;
+        }
+
+        .message {
+            height: 150px;
+        }
+
+        .button {
+            background-color: #171717;
+            color: white;
+            padding: 5px 0px;
+            height: 30px;
+
+            &:hover {
+                opacity: 0.8;
+            }
         }
     }
-    
+}
+
+footer {
+    background-color: #171717;
+    padding: 20px 0px;
+
+    ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        img {
+            width: 20px;
+            filter: invert(1);
+            margin: 10px 10px;
+
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+    }
+
+    h4 {
+        color: white;
+        font-size: 10px;
+        text-align: center;
+        font-weight: 200;
+    }
 }
