--- a/style.css
+++ b/style.css
@@ -74,6 +74,45 @@ header nav ul {
   }
 }
 
+.container-filigrane {
+  position: relative;
+}
+
+.filigrane {
+  position: relative;
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: rgb(0, 0, 0);
+  opacity: 0.08;
+  font-size: 40px;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .filigrane {
+    font-size: 50px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .filigrane {
+    font-size: 70px;
+  }
+}
+
+.dessus {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 20px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .section-1 {
   background-color: #f5f5f5;
   text-align: center;
@@ -81,39 +120,17 @@ header nav ul {
 }
 .section-1 h3 {
   font-weight: 300;
-  margin-bottom: 20px;
+  margin-bottom: 30px 0px;
 }
 @media screen and (min-width: 768px) {
   .section-1 h3 {
     font-size: 30px;
+    margin: 30px 0px;
   }
-}
-.section-1 .container-filigrane1 {
-  position: relative;
-}
-.section-1 .filigrane1 {
-  position: relative;
-  -webkit-background-clip: text;
-          background-clip: text;
-  color: rgb(0, 0, 0);
-  opacity: 0.05;
-  font-size: 35px;
-  font-weight: 900;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.section-1 .dessus1 {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0;
 }
 .section-1 hr {
   width: 10%;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 .section-1 p {
   padding: 20px;
@@ -126,7 +143,7 @@ header nav ul {
 }
 .section-2 h3 {
   font-weight: 300;
-  margin-bottom: 20px;
+  margin: 40px 0px;
 }
 @media screen and (min-width: 768px) {
   .section-2 h3 {
@@ -135,7 +152,7 @@ header nav ul {
 }
 .section-2 hr {
   width: 10%;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 .section-2 ul {
   padding: 20px;
@@ -188,16 +205,17 @@ header nav ul {
 .section-3 h3 {
   font-weight: 300;
   margin-bottom: 20px;
+  margin: 30px 0px;
 }
 @media screen and (min-width: 768px) {
   .section-3 h3 {
     font-size: 30px;
-    margin: 0px 30px;
+    margin: 30px 30px;
   }
 }
 .section-3 hr {
   width: 10%;
-  margin: 0 auto;
+  margin: 40px auto;
 }
 .section-3 p {
   padding: 20px;
@@ -208,11 +226,14 @@ header nav ul {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-top: 30px;
 }
 @media screen and (min-width: 768px) {
   .section-3 .gallerie-icon {
     width: 800px;
-    margin: auto;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .section-3 .gallerie-icon .bloc-icon {
@@ -224,6 +245,7 @@ header nav ul {
   height: 200px;
   width: 200px;
   margin: 20px;
+  box-shadow: 8px -1px 32px -11px rgba(0, 0, 0, 0.61);
 }
 .section-3 .gallerie-icon .bloc-icon img {
   width: 30px;
@@ -245,6 +267,7 @@ header nav ul {
 @media screen and (min-width: 768px) {
   .section-4-left {
     width: 30%;
+    margin: 0px;
   }
 }
 .section-4-right {
@@ -277,112 +300,117 @@ header nav ul {
   color: white;
   font-size: 12px;
 }
-.section-4-right .container-techno1 {
+.section-4-right .container-techno .techno1 {
   background-color: #f5f5f5;
   width: 100%;
   box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
   margin: 10px 0px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
 }
-.section-4-right .container-techno1 p {
+.section-4-right .container-techno .techno1-barre {
   width: 94%;
   background-color: #d9534f;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.section-4-right .container-techno1 p img {
-  margin-right: 10px;
-}
-.section-4-right .container-techno2 {
+.section-4-right .container-techno .techno2 {
   background-color: #f5f5f5;
   width: 100%;
   box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
   margin: 10px 0px;
 }
-.section-4-right .container-techno2 p {
+.section-4-right .container-techno .techno2-barre {
   width: 94%;
-  background-color: #0E3658;
+  background-color: #0e3658;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.section-4-right .container-techno2 p img {
-  margin-right: 10px;
-}
-.section-4-right .container-techno3 {
+.section-4-right .container-techno .techno3 {
   background-color: #f5f5f5;
   width: 100%;
   box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
   margin: 10px 0px;
 }
-.section-4-right .container-techno3 p {
+.section-4-right .container-techno .techno3-barre {
   width: 90%;
-  background-color: #3370b7;
+  background-color: #337ab7;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.section-4-right .container-techno3 p img {
-  margin-right: 10px;
-}
-.section-4-right .container-techno4 {
+.section-4-right .container-techno .techno4 {
   background-color: #f5f5f5;
   width: 100%;
   box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
   margin: 10px 0px;
 }
-.section-4-right .container-techno4 p {
+.section-4-right .container-techno .techno4-barre {
   width: 80%;
   background-color: #5399c8;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.section-4-right .container-techno4 p img {
-  margin-right: 10px;
-}
-.section-4-right .container-techno5 {
+.section-4-right .container-techno .techno5 {
   background-color: #f5f5f5;
   width: 100%;
   box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
   margin: 10px 0px;
 }
-.section-4-right .container-techno5 p {
+.section-4-right .container-techno .techno5-barre {
   width: 75%;
   background-color: #439788;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.section-4-right .container-techno5 p img {
-  margin-right: 10px;
-}
-.section-4-right .container-techno6 {
+.section-4-right .container-techno .techno6 {
   background-color: #f5f5f5;
   width: 100%;
   box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
   margin: 10px 0px;
 }
-.section-4-right .container-techno6 p {
+.section-4-right .container-techno .techno6-barre {
   width: 70%;
   background-color: #e85f80;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.section-4-right .container-techno6 p img {
-  margin-right: 10px;
-}
-.section-4-right .container-techno7 {
+.section-4-right .container-techno .techno7 {
   background-color: #f5f5f5;
   width: 100%;
   box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
   margin: 10px 0px;
 }
-.section-4-right .container-techno7 p {
+.section-4-right .container-techno .techno7-barre {
   width: 70%;
   background-color: #333333;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.section-4-right .container-techno7 p img {
-  margin-right: 10px;
-}
-.section-4-right .container-techno8 {
+.section-4-right .container-techno .techno8 {
   background-color: #f5f5f5;
   width: 100%;
   box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
   margin: 10px 0px;
 }
-.section-4-right .container-techno8 p {
+.section-4-right .container-techno .techno8-barre {
   width: 70%;
   background-color: #e8b361;
-}
-.section-4-right .container-techno8 p img {
-  margin-right: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .section-5 {
@@ -392,6 +420,7 @@ header nav ul {
 .section-5 h3 {
   text-align: center;
   font-weight: 300;
+  margin: 30px 0px;
 }
 @media screen and (min-width: 768px) {
   .section-5 h3 {
@@ -400,7 +429,7 @@ header nav ul {
 }
 .section-5 hr {
   width: 10%;
-  margin: 20px auto;
+  margin: 30px auto;
 }
 .section-5 form {
   display: flex;
