--- a/style.scss
+++ b/style.scss
@@ -76,6 +76,43 @@ header {
     }
 }
 
+.container-filigrane {
+    position: relative;
+}
+
+.filigrane {
+position: relative;
+background-clip: text;
+color: rgb(0, 0, 0);
+opacity: 0.08;
+font-size: 40px;
+font-weight: 900;
+display: flex;
+justify-content: center;
+align-items: center;
+
+@media screen and (min-width: 768px) {
+    font-size: 50px;
+}
+@media screen and (min-width: 1024px) {
+    font-size: 70px;
+}
+
+}
+.dessus {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 20px!important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 .section-1 {
     background-color: #f5f5f5;
     text-align: center;
@@ -83,40 +120,16 @@ header {
 
     h3 {
         font-weight: 300;
-        margin-bottom: 20px;
+        margin-bottom: 30px 0px;
         @media screen and (min-width: 768px) {
             font-size: 30px;
+            margin: 30px 0px;
         }
-    }
-
-    .container-filigrane1 {
-        position: relative;
-    }
-
-    .filigrane1 {
-    position: relative;
-    background-clip: text;
-    color: rgb(0, 0, 0);
-    opacity: 0.05;
-    font-size: 35px;
-    font-weight: 900;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-    .dessus1 {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin:0;
     }
 
     hr {
         width: 10%;
-        margin: 0 auto;
+        margin: 30px auto;
     }
 
     p {
@@ -132,16 +145,15 @@ header {
 
     h3 {
         font-weight: 300;
-        margin-bottom: 20px;
+        margin: 40px 0px;
         @media screen and (min-width: 768px) {
             font-size: 30px;
         }
     }
 
-
     hr {
         width: 10%;
-        margin: 0 auto;
+        margin: 30px auto;
     }
 
     ul {
@@ -199,15 +211,16 @@ header {
     h3 {
         font-weight: 300;
         margin-bottom: 20px;
+        margin: 30px 0px;
         @media screen and (min-width: 768px) {
             font-size: 30px;
-            margin: 0px 30px;
+            margin: 30px 30px;
         }
     }
 
     hr {
         width: 10%;
-        margin: 0 auto;
+        margin: 40px auto;
     }
 
     p {
@@ -220,9 +233,12 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        margin-top: 30px;
         @media screen and (min-width: 768px) {
             width: 800px;
-            margin: auto;
+            margin-top: 30px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .bloc-icon {
@@ -234,6 +250,7 @@ header {
             height: 200px;
             width: 200px;
             margin: 20px;
+            box-shadow: 8px -1px 32px -11px rgba(0,0,0,0.61);
     
             img {
                 width: 30px;
@@ -257,6 +274,7 @@ header {
         }
         @media screen and (min-width: 768px) {
             width: 30%;
+            margin: 0px;
             
         }
     }
@@ -302,134 +320,124 @@ header {
             color: white;
             font-size: 12px;
 
-            &1 {
+            .techno1 {
                 background-color: #f5f5f5;
                 width: 100%;
                 box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
                 margin: 10px 0px;
+
+                &-barre {
+                width: 94%;
+                background-color: #d9534f;
                 display: flex;
                 flex-direction: row;
+                justify-content: space-between;
                 align-items: center;
-
-                p {
-                    width: 94%;
-                    background-color: #d9534f;
-
-                    img {
-                        margin-right: 10px;
-                    }
                 }
             }
-
-            &2 {
+            .techno2 {
                 background-color: #f5f5f5;
                 width: 100%;
                 box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
                 margin: 10px 0px;
 
-                p {
-                    width: 94%;
-                    background-color: #0E3658;
-
-                    img {
-                        margin-right: 10px;
-                    }
+                &-barre {
+                width: 94%;
+                background-color: #0e3658;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
                 }
             }
-
-            &3 {
-                background-color: #f5f5f5;
-                width: 100%;
-                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
-                margin: 10px 0px;
-                
-                p {
-                    width: 90%;
-                    background-color: #3370b7;
-
-                    img {
-                        margin-right: 10px;
-                    }
-                }
-            }
-
-            &4 {
+            .techno3 {
                 background-color: #f5f5f5;
                 width: 100%;
                 box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
                 margin: 10px 0px;
 
-                p {
-                    width: 80%;
-                    background-color: #5399c8;
-
-                    img {
-                        margin-right: 10px;
-                    }
+                &-barre {
+                width: 90%;
+                background-color: #337ab7;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
                 }
             }
-
-            &5 {
+            .techno4 {
                 background-color: #f5f5f5;
                 width: 100%;
                 box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
                 margin: 10px 0px;
 
-                p {
-                    width: 75%;
-                    background-color: #439788;
-
-                    img {
-                        margin-right: 10px;
-                    }
+                &-barre {
+                width: 80%;
+                background-color: #5399c8;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
                 }
             }
-
-            &6 {
+            .techno5 {
                 background-color: #f5f5f5;
                 width: 100%;
                 box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
                 margin: 10px 0px;
 
-                p {
-                    width: 70%;
-                    background-color: #e85f80;
-
-                    img {
-                        margin-right: 10px;
-                    }
+                &-barre {
+                width: 75%;
+                background-color: #439788;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
                 }
             }
-
-            &7 {
+            .techno6 {
                 background-color: #f5f5f5;
                 width: 100%;
                 box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
                 margin: 10px 0px;
 
-                p {
-                    width: 70%;
-                    background-color: #333333;
-
-                    img {
-                        margin-right: 10px;
-                    }
+                &-barre {
+                width: 70%;
+                background-color: #e85f80;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
                 }
             }
-
-            &8 {
+            .techno7 {
                 background-color: #f5f5f5;
                 width: 100%;
                 box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
                 margin: 10px 0px;
 
-                p {
-                    width: 70%;
-                    background-color: #e8b361;
+                &-barre {
+                width: 70%;
+                background-color: #333333;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                }
+            }
+            .techno8 {
+                background-color: #f5f5f5;
+                width: 100%;
+                box-shadow: inset 8px 8px 16px #c5c5c5, inset -8px -8px 16px #fbfbfb;
+                margin: 10px 0px;
 
-                    img {
-                        margin-right: 10px;
-                    }
+                &-barre {
+                width: 70%;
+                background-color: #e8b361;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
                 }
             }
         }
@@ -443,6 +451,7 @@ header {
     h3 {
         text-align: center;
         font-weight: 300;
+        margin: 30px 0px;
         @media screen and (min-width: 768px) {
             font-size: 30px;
         }
@@ -451,7 +460,7 @@ header {
 
     hr {
         width: 10%;
-        margin: 20px auto;
+        margin: 30px auto;
     }
 
     form {
