--- a/style.scss
+++ b/style.scss
@@ -505,9 +505,12 @@ footer {
         align-items: center;
 
         img {
-            width: 20px;
+            width: 30px;
             filter: invert(1);
             margin: 10px 10px;
+            border: solid 1px black ;
+            border-radius: 50%;
+            padding: 5px;
 
             &:hover {
                 opacity: 0.8;
